# 1password-tracecat-integration

./: .gitignore  README.md  pyproject.toml  requirements.txt
custom_actions/: __init__.py  greetings.py
onepassword/: greetings.py  mapping.py  onepassword_actions.py
onepassword/templates/: power_of_three.yml
