[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "onepassword"  # This must be the same name as your package
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [onepassword-sdk]  # Add your pip dependencies here

[tool.hatch.version]
path = "onepassword/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["onepassword"]
# Include YAML templates in pip package
include = ["/onepassword", "/onepassword/**/*.yml"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "tracecat @ git+https://github.com/TracecatHQ/tracecat",
    "tracecat_registry[cli] @ git+https://github.com/TracecatHQ/tracecat#subdirectory=registry&egg=tracecat_registry",
]
